# filestick

./: CMakeLists.txt  FS-PROTOCOL.md  FUNCTION-CODES.md  LICENSE  LICENSE.md  README.md
boot/: CMakeLists.txt  serial_putc.S  spi_flash.S  stage0.S  stage0.ld  stage0.s
fileserver/: CMakeLists.txt  main.c  message.c  message.h  starcmd.c  starcmd.h
hardware/: Makefile  bintohex.c  blkram.v  econet_hwctl.v  econet_rx.v  econet_rx_buffered.v  econet_rx_phy.v  econet_tx_buffered.v  econet_tx_phy.v  fcs.v  femtorv32_gracilis.v  filestick-boot.hex  ice40up5k_spram.v  sdcard.v  spi.v  spicore.v  timer.v  toplevel.v  uart_picosoc_shrunk.v  upduino.pcf  upduino2.pcf
hardware/test_spi/: serial_putc.S  serial_write.s  spi_flash.S
include/: filestick.h  poll.h
include/sys/: console.h  dirent.h  econet.h  ioctl.h  mount.h
init/: CMakeLists.txt  cli.c  conffile.c  configure.c  icommands.c  icommands.h  init.h  main.c  peekpoke.c  xmodem_server.c
init_test/: CMakeLists.txt  init_test.ld  lib.s  serial_write.s  strlen.c  test.c  test.s
lib/: CMakeLists.txt  filestick.specs  ioctl.c  malloc.c  mount.c  readdir.c  sbrk.c  syscall.S  syscall.h
monitor/: CMakeLists.txt  decoder.c  decoder.h  monitor.c
pcb/filestick/: filestick.kicad_pcb  filestick.kicad_prl  filestick.kicad_pro  filestick.kicad_sch  filestick_ic_lib.kicad_sym  fp-lib-table  sym-lib-table
pcb/filestick/filestick-footprints.pretty/: DIP48_0.7in.kicad_mod  Lumberg_DIN41524_5pin.kicad_mod
prototype/filestick-prototype/: filestick-prototype.kicad_pcb  filestick-prototype.kicad_prl  filestick-prototype.kicad_pro  filestick-prototype.kicad_sch  filestick_ic_lib.kicad_sym  fp-lib-table  sym-lib-table
prototype/filestick-prototype/filestick-footprints.pretty/: Lumberg_DIN41524_5pin.kicad_mod  pololu_sd_card.kicad_mod
prototype/gerber/: README.txt  filestick-prototype-B_Cu.gbr  filestick-prototype-B_Mask.gbr  filestick-prototype-Edge_Cuts.gbr  filestick-prototype-F_Cu.gbr  filestick-prototype-F_Mask.gbr  filestick-prototype-F_Silkscreen.gbr  filestick-prototype-GND_Cu.gbr  filestick-prototype-PTH.drl  filestick-prototype-Pwr_Cu.gbr  filestick-prototype-job.gbrjob
rtl/: Makefile  blkram.v  econet_hwctl.v  econet_rx.v  econet_rx_buffered.v  econet_rx_phy.v  fcstab.hex  femtorv32_gracilis.v  fifo.v  fifo_uart.v  filestick-boot.hex  timer.v  toplevel.v  uart_picosoc_shrunk.v  upduino2.pcf  v1-altserial.pcf  v1.1.pcf  v1.pcf
rtl/sim/: spi.v
rtl/test_spi/: CMakeLists.txt  devices.h  test.S
simlib/: CMakeLists.txt  econet_handler.c  sim_console.c  sim_econet.c  sim_file.c  sim_flashdev.c  sim_rgbled.c  sim_syscalls.c  simulator.c  simulator.h  udp_econet.c  udp_econet.h
system/: CMakeLists.txt  brk.c  brk.h  console.c  console.h  console_rx.S  console_rx.s  cpu.h  crash.c  crash.h  cust_errno.h  debug_syscall.c  dev_open.c  dev_open.h  devices.h  devices.inc  directory.c  disk_io.h  diskio.c  econet_rx.S  econet_rx.s  elfload.c  elfload.h  errno.h  exit.c  exit.h  fd.c  fd.h  ff.c  ffconf.h  file.c  file_ops.c  filesystem.h  flashdisc.c  flashdisc.h  get_csr.S  hexdump.c  hexdump.h  init.S  init.h  (+46 more)
